@@ -1,2 +1,3 @@
 #1 Merge bundles and modules into a single concept
 #2 Auto-load extensions
+#3 Create BootLogger outside DI, add "trace" logging
